[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Pairing threshold cryptography"
edition = "2021"
license = "GPL-3.0"
name = "blsttc"
readme = "README.md"
repository = "https://github.com/maidsafe/blsttc"
version = "4.0.0"

[dependencies]
blst = { version = "0.3.7", features = ["portable"] }
blstrs = { version = "0.4.2", features = ["portable"] }
ff = "0.11.0"
group = "0.11.0"
hex_fmt = "0.3.0"
pairing = "0.21.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.104", features = ["derive"] }
thiserror = "1.0.22"
tiny-keccak = { version = "2.0.1", features = ["sha3"] }
zeroize = "1.3.0"

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.3.1"
eyre = "0.6.5"
hex = "0.4.3"
rand_core = "0.6.3"
rand_xorshift = "0.3.0"

[[bench]]
name = "bench"
harness = false
